--- a/myblog/blog/templates/blog/post_detail.html
+++ b/myblog/blog/templates/blog/post_detail.html
@@ -10,8 +10,13 @@
 <body>
     <h1>{{ post.title }}</h1>
     <p>{{ post.text }}</p>
-    <p><i>Опубликовано: {{ post.published_date }}</i></p>
-
+    PS C:\Users\huawei\Desktop\djangogirlsFiruza> myvenv\Scripts\activate
+    myvenv\Scripts\activate : Не удалось загрузить модуль "myvenv". Для получения дополнительных сведений выполните команду "Import-Module myvenv".
+    строка:1 знак:1
+    + myvenv\Scripts\activate
+    + ~~~~~~~~~~~~~~~~~~~~~~~
+        + CategoryInfo          : ObjectNotFound: (myvenv\Scripts\activate:String) [], CommandNotFoundException
+        + FullyQualifiedErrorId : CouldNotAutoLoadModule
     <a href="{% url 'post_list' %}" class="back-btn">Назад к блогу</a>
 </body>
 </html>
